--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
-{
+
+  {
   "name": "maternal-health-hub",
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://yourusername.github.io/maternal-health-hub",
   "scripts": {
     "dev": "vite",
     "start": "vite",
@@ -16,8 +18,7 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
-    "react-select": "^5.10.2",
-    "recharts": "^3.3.0"
+    "react-select": "^5.10.2"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.17",
